--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@lectrum/config-commitlint": "^1.1.0",
         "@lectrum/eslint-config-core": "^1.1.15",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "~10.0.3",
+        "babel-eslint": "^10.0.3",
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
         "babel-preset-jest": "^24.9.0",
